--- a/dtree.css
+++ b/dtree.css
@@ -1,12 +1,13 @@
 /*--------------------------------------------------|
 | dTree 2.05 | www.destroydrop.com/javascript/tree/ |
 |---------------------------------------------------|
-| Copyright (c) 2002-2003 Geir Landrö               |
+| Copyright (c) 2002-2003 Geir LandrÃ¶        
+| Diedit mBurokz 31 Januari 2021 18:52
 |--------------------------------------------------*/
 
 .dtree {
 	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
-	font-size: 11px;
+	font-size: 14px;
 	color: #666;
 	white-space: nowrap;
 }
